<resources>
    <string name="app_name">Simple Dungeon</string>
    <string name="cooldown">cooldown</string>
    <string name="victory">"You've beaten the game!"</string>
    <string name="defeat">"You've died idiot!"</string>
    <string name="score">score: </string>
    <string name="gameviewname">Game</string>
    <string name="scoreviewname">Score</string>
    <string name="statsviewname">Stats</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="succes">Succes</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sounds">Sound</string>
    <string name="chartdescription">Damage dealt vs damage received</string>
    <string name="damage">damage</string>
    <string name="nointernet">No internet connection available, please connect to internet</string>
    <string name="reset">reset</string>
    <string name="statsreset">stats have been reset</string>
</resources>
